<resources>
    <string name="app_name">power</string>
    <string name="error_loadlogo">LoadLogo</string>
    <string name="error_spartak">SpatakLogo</string>
    <string name="logo_text">Тайна мощных СИСКЭ</string>
    <string name="load_text">подожди, спартак, идёт загрузка…</string>
    <string name="error_loginframegray">LoginFrameGray</string>
    <string name="error_registerframegray">RegisterFrameGray</string>
    <string name="error_login">Login</string>
    <string name="error_reg">Register</string>
    <string name="error_grayrectanglesmall">GrayRectangleSmall</string>
    <string name="error_strokepanel">StrokePanel</string>
    <string name="enter_loginpassword">Пожалуйста, введите логин и пароль для авторизации</string>
    <string name="enter_login">Введите ваш логин</string>
    <string name="enter_password">Введите ваш пароль</string>
    <string name="confirm_password">Подтвердите ваш пароль</string>
    <string name="login">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="i_dont_have">у меня нет</string>
    <string name="i_have">у меня есть</string>
    <string name="akka">аккаунта</string>
    <string name="akk">аккаунт</string>
    <string name="loginaccount">Вход в аккаунт</string>
    <string name="regaccount">Регистрация</string>
    <string name="background">background_error</string>
    <string name="error_training_button">Перейти на вкладку Тренировка</string>
    <string name="error_eating">Перейти на вкладку питание</string>
    <string name="welcome_text">Добро пожаловать, СПАРТАК!</string>
    <string name="welcome_background">welcome_background</string>
    <string name="error_eating_button">Перейти на вкладку Питание</string>
    <string name="error_profile_button">Перейти на вкладку профиль</string>
    <string name="error_achievmenttext">Мои Достижения</string>
    <string name="error_trainingtext">Тренировка</string>
    <string name="error_eatingtext">Питание</string>
    <string name="error_profiletext">Профиль</string>
    <string name="progress_text">До цели осталось: 123 кг</string>
    <string name="eating_text">Питание</string>
    <string name="profile_text">Профиль</string>
    <string name="train_text">Тренировка</string>
    <string name="todo1">TODO1</string>
    <string name="eating_razdel">РАЗДЕЛ ПИТАНИЯ</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="error_fullbody_train">Перейти на тренировку всего тела</string>
    <string name="error_fullbody_chapter">Перейти на один из разделов тренировок</string>
    <string name="error_fullbody_train_text">Тренировка всего тела</string>
    <string name="error_fullbody_train_start_text">Начинающий 7 мин</string>
    <string name="training_chapter">РАЗДЕЛ ТРЕНИРОВОК</string>
    <string name="statistics_text">Статистика</string>
    <string name="information_text">Информация</string>
    <string name="Height">Рост</string>
    <string name="Weight">Вес</string>
    <string name="desired_weight">Желаемый вес</string>
    <string name="paul">Пол</string>
    <string name="level">Уровень</string>
    <string name="female_male">м/ж</string>
    <string name="level_et">н/п</string>
    <string name="eatinglevel">н/с веса</string>
    <string name="eating_text_level">Питание</string>
    <string name="load_text_btn">Загрузить</string>
    <string name="save_text_btn">Сохранить</string>
    <string name="quesion_main">ЧЕМ БЫ ВЫ ХОТЕЛИ ЗАНЯТЬСЯ СЕГОДНЯ?</string>
    <string name="training_icon_btn">икнока тренировки</string>
    <string name="achivment_icon_btn">достижения иконка\n\n</string>
    <string name="eating_icon_btn">TODO</string>
    <string name="profile_text_btn">профиль иконка\n</string>
    <string name="start_train">НАЧАЛО</string>
    <string name="elem_train_1">Обратные отжимания</string>
    <string name="elem_train_2">Выпады</string>
    <string name="elem_train_3">Прыжки с махами над головой</string>
    <string name="elem_train_4">Планка</string>
    <string name="elem_train_5">Отжимания</string>
    <string name="elem_train_6">Приготовьтесь к следующему упражнению</string>
    <string name="time_30">30 сек</string>
    <string name="time_25">25 сек</string>
    <string name="gray_background">gray background</string>
    <string name="name_train">Название упражнения</string>
    <string name="timer">00:00</string>
    <string name="pause_btn">ПАУЗА</string>
    <string name="pause_icon">pause_icon</string>
    <string name="training_complete">Поздравляю!</string>
    <string name="last_train_btn">Последняя тренировка\n</string>
    <string name="skip_train_btn">Пропустить тренировку\n</string>
    <string name="pause_logo_text">ПАУЗА</string>
    <string name="restart_btn">Начать заново</string>
    <string name="exit_btn">Выйти в меню</string>
    <string name="continue_btn">Продолжить</string>
    <string name="play_logo_btn">play_logo_btn</string>
    <string name="reset_logo_btn">reset_logo_btn</string>
    <string name="menu_logo_btn">menu_logo_btn</string>
    <string name="text_train_finish">Поздравляю!</string>
    <string name="train_complete">Тренировка завершена</string>
    <string name="text_close">ЗАКРЫТЬ</string>
    <string name="png_mem1">TODO</string>
    <string name="text_achievments">Достижения</string>
    <string name="text_received">Полученные</string>
    <string name="text_all">Все</string>
    <string name="background_for_achievment">achievment_background\n</string>
    <string name="mem_error">error mem\n</string>
    <string name="mem1_text">Первые шаги</string>
    <string name="mem2_text">Ешь</string>
    <string name="mem3_text">Проверка состояния</string>
    <string name="mem4_text">Начало пути</string>
    <string name="mem5_text">Блудный сын</string>
    <string name="mem1_1_text">впервые заполнить информацию о себе</string>
    <string name="mem2_2_text">впервые войти в аккаунт</string>
    <string name="mem3_3_text">впервые перейти в раздел “Питание”</string>
    <string name="mem4_4_text">закончить первую тренировку</string>
    <string name="mem5_5_text">не заходить в аккаунт 7 дней</string>
    <string name="oval">oval</string>
    <string name="oval2">oval2\n</string>
    <string name="oval3">oval3\n</string>
    <string name="percent_fat">Процент жира</string>
    <string name="percent">22%</string>
    <string name="fat_mass">Жировая масса</string>
    <string name="muscle_mass">Сухая масса</string>
    <string name="rectangle_for_background">rectangle_for_background</string>
    <string name="rectangle_for_background2">rectangle_for_background2</string>
    <string name="xxx_x">xxx,x</string>
    <string name="kg">кг</string>
    <string name="cub_1">cub_1</string>
    <string name="cub_2">cub_2\n\n</string>
    <string name="cub_3">cub_3\n</string>
    <string name="cub_4">cub_4\n</string>
    <string name="cub_5">cub_5\n</string>
    <string name="background_blue">background_blue</string>
    <string name="background_green">background_green</string>
    <string name="background_orange">background_orange</string>
    <string name="background_pink">TODO</string>
    <string name="low_level"><![CDATA[Низкий (< 18,7%)]]></string>
    <string name="normal_level">Нормальный (18,7 - 30,1%)</string>
    <string name="high_level">Высокий (30,1 - 37,2%)</string>
    <string name="extra_high_level"><![CDATA[Очень высокий (> 37,2%)]]></string>
    <string name="IMT">Индекс массы тела</string>
    <string name="background_for_imt">background_for_imt</string>
    <string name="imt_text">50,9</string>
    <string name="color_rectangle_1">color_rectangle_1\n</string>
    <string name="color_rectangle_2">color_rectangle_2\n</string>
    <string name="color_rectangle_3">color_rectangle_3\n</string>
    <string name="color_rectangle_4">color_rectangle_4</string>
    <string name="color_rectangle_5">color_rectangle_5</string>
    <string name="mass_small"><![CDATA[Недостаточный вес (< 17,8)]]></string>
    <string name="mass_normal">Нормальный вес (17,8 - 26)</string>
    <string name="mass_high">Избыточный вес (26 - 31)</string>
    <string name="mass_extra_high">Ожирение (31 - 40)</string>
    <string name="mass_ultra_high"><![CDATA[Болезненное ожирение (> 40)]]></string>
    <string name="fullsize_breakfast_logo">fullsize_breakfast_logo</string>
    <string name="З">З</string>
    <string name="avtrak">АВТРАК</string>
    <string name="eggs">eggs</string>
    <string name="ovsyanka">ovsyanka</string>
    <string name="buter">buter\n\n</string>
    <string name="omelet">omelet</string>
    <string name="salad">salad\n</string>
    <string name="smoothie">smoothie</string>
    <string name="KKAL">ккал</string>
    <string name="text_eggs">Яичница-болтунья с зеленью из двух яиц</string>
    <string name="ovsyanka_text">Овсянка с ягодами и орехами</string>
    <string name="buter_text">Бутерброды с ветчиной</string>
    <string name="omelet_text">Омлет с ветчиной и сыром на сковороде</string>
    <string name="salad_text">Салат с крабовыми палочками и помидорами</string>
    <string name="smoothie_text">Смузи из сельдерея, яблок и киви в блендере</string>
    <string name="value_kkal_1">: 249</string>
    <string name="value_kkak_2">: 226</string>
    <string name="value_kkak_3">: 127</string>
    <string name="value_kkak_4">: 158</string>
    <string name="value_kkak_5">: 163</string>
    <string name="value_kkak_6">: 35</string>
    <string name="inf_btn_1">TODO</string>
    <string name="O">О</string>
    <string name="БЕД">БЕД</string>
    <string name="soup_text">Сырный крем-суп с сухарями</string>
    <string name="rice_text">Рис с мексиканской смесью</string>
    <string name="chicken">Курица по-французски в духовке</string>
    <string name="ratatui_text">Рататуй классический</string>
    <string name="grechka">Гречка с овощами в мультиварке</string>
    <string name="legs_text">Куриные ножки, запечённые в духовке</string>
    <string name="value_kkal_7">: 153</string>
    <string name="value_kkal_8">: 118</string>
    <string name="value_kkal_9">: 110</string>
    <string name="value_kkal_10">: 258</string>
    <string name="value_kkal_11">: 151</string>
    <string name="value_kkal_12">: 228</string>
    <string name="У">У</string>
    <string name="ЖИН">ЖИН</string>
    <string name="stake_text">Стейк из лосося на грилле под специями</string>
    <string name="cezar_text">Цезарь с помидорами и сыром</string>
    <string name="pasta_text">Лапша с зеленью</string>
    <string name="rice_2_text">Рис с грибами, с мексиканской смесью и зеленью</string>
    <string name="zapekanka_text">Запеканка с курицей и брокколи</string>
    <string name="pasta_2_text">Паста с лососем и шпинатом в сливочном соусе</string>
    <string name="_197">: 197</string>
    <string name="recept_1">recept_1</string>
    <string name="Sostav">Состав</string>
    <string name="oval_color_1">oval_color_1</string>
    <string name="oval_color_2">oval_color_2</string>
    <string name="oval_color_3">oval_color_3</string>
    <string name="ingridients">Ингредиенты</string>
    <string name="etap_kitchen">Этапы готовки</string>
    <string name="recept_2_belki">Белки: 7 г.</string>
    <string name="_11">Жиры: 11 г.</string>
    <string name="_28">Углеводы: 28 г.</string>
    <string name="recept_2_text">• Овсяные хлопья, 50 гр. \n• Молоко, 300 гр.\n• Ягоды, 50 гр.\n• Сливочное масло, 10 гр.\n• Сахар, 1 чайн. л.\n• Соль, 1/4 чайн. л.\n• Орехи</string>
    <string name="etap_2">1. Налить молоко в кастрюлю и довести до кипения\n 2. Всыпать сахар, соль и овсяные хлопья, а затем перемешать\n 3. Сделать огонь небольшим и оставить кашу вариться\n 4. Время от времени помешивать кашу, через пару минут варки всыпать ягоды (если они замороженные!)\n 5. Варить кашу на маленьком огне до готовности, а затем перемешать и дать ей настояться около 5-10 минут\n 6. Наполнить тарелку и посыпать сверху ягодами (не замороженными!) и орехами</string>
</resources>