<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="700dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp"
    tools:ignore="TextSizeCheck">

    <ImageView
        android:id="@+id/imageView78"
        android:layout_width="360dp"
        android:layout_height="47dp"
        android:contentDescription="@string/recept_1"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recept_2"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78"
        app:srcCompat="@drawable/exit_krest"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Sostav"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78" />

    <ImageView
        android:id="@+id/imageView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/oval_color_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78"
        app:srcCompat="@drawable/oval_color"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/oval_color_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78"
        app:srcCompat="@drawable/oval_color_2"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/oval_color_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78"
        app:srcCompat="@drawable/oval_color_3"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recept_2_belki"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_light"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView80"
        app:layout_constraintStart_toEndOf="@+id/imageView80"
        app:layout_constraintTop_toTopOf="@+id/imageView80" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_light"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView81"
        app:layout_constraintStart_toEndOf="@+id/imageView81"
        app:layout_constraintTop_toTopOf="@+id/imageView81" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_28"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_light"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView82"
        app:layout_constraintStart_toEndOf="@+id/imageView82"
        app:layout_constraintTop_toTopOf="@+id/imageView82" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ingridients"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView78" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:lines="6"
        android:text="@string/recept_2_text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView62"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/etap_kitchen"
        android:textColor="#202020"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="330dp"
        android:layout_height="252dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/etap_2"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView64"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>