<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="470dp"
        android:layout_height="315dp"
        android:layout_marginTop="-88dp"
        android:contentDescription="@string/welcome_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oval"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="484sp"
        android:layout_height="179sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/uefa_titling"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <ImageButton
        android:id="@+id/trainingButton"
        android:layout_width="242dp"
        android:layout_height="242dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/error_training_button"
        android:scaleType="centerCrop"
        android:tintMode="@null"
        app:layout_constraintBottom_toTopOf="@+id/achievementsButton"
        app:layout_constraintEnd_toStartOf="@+id/eatingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/training"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/eatingButton"
        android:layout_width="242dp"
        android:layout_height="242dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/error_eating"
        android:scaleType="centerCrop"
        android:tintMode="@null"
        app:layout_constraintBottom_toTopOf="@+id/profileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trainingButton"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/eating"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <ImageButton
        android:id="@+id/achievementsButton"
        android:layout_width="242dp"
        android:layout_height="242dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/error_eating_button"
        android:scaleType="centerCrop"
        android:tintMode="@null"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainingButton"
        app:srcCompat="@drawable/achivments"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="242dp"
        android:layout_height="242dp"
        android:background="@drawable/rectangle"
        android:contentDescription="@string/error_profile_button"
        android:scaleType="centerCrop"
        android:tintMode="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/achievementsButton"
        app:layout_constraintTop_toBottomOf="@+id/eatingButton"
        app:srcCompat="@drawable/profile"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/error_trainingtext"
        app:layout_constraintStart_toStartOf="@+id/trainingButton"
        app:layout_constraintTop_toTopOf="@+id/trainingButton"
        app:srcCompat="@drawable/trainingtext"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="198dp"
        android:layout_height="68dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/error_achievmenttext"
        app:layout_constraintStart_toStartOf="@+id/achievementsButton"
        app:layout_constraintTop_toTopOf="@+id/achievementsButton"
        app:srcCompat="@drawable/achievmentstext"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/error_eatingtext"
        app:layout_constraintStart_toStartOf="@+id/eatingButton"
        app:layout_constraintTop_toTopOf="@+id/eatingButton"
        app:srcCompat="@drawable/eatingtext" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/error_profiletext"
        app:layout_constraintStart_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="@+id/profileButton"
        app:srcCompat="@drawable/profiletext"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/quesion_main"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginTop="29dp"
        android:background="@color/white"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/profileIconButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievementsButton"
        app:srcCompat="@drawable/homeiconon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintBounds" />

    <ImageButton
        android:id="@+id/profileIconButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="29dp"
        android:background="@color/white"
        android:contentDescription="@string/profile_text_btn"
        app:layout_constraintEnd_toStartOf="@+id/trainingIconButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/achievementsButton"
        app:srcCompat="@drawable/profileicon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck,VisualLintBounds" />

    <ImageButton
        android:id="@+id/trainingIconButton"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:layout_marginTop="33dp"
        android:background="@color/white"
        android:contentDescription="@string/training_icon_btn"
        app:layout_constraintEnd_toStartOf="@+id/eatingIconButton"
        app:layout_constraintStart_toEndOf="@+id/profileIconButton"
        app:layout_constraintTop_toBottomOf="@+id/achievementsButton"
        app:srcCompat="@drawable/trainingicon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <ImageButton
        android:id="@+id/eatingIconButton"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:contentDescription="@string/eating_icon_btn"
        app:layout_constraintEnd_toStartOf="@+id/achivmentIconButton"
        app:layout_constraintStart_toEndOf="@+id/trainingIconButton"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"
        app:srcCompat="@drawable/eatingicon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <ImageButton
        android:id="@+id/achivmentIconButton"
        android:layout_width="35dp"
        android:layout_height="43dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:contentDescription="@string/achivment_icon_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eatingIconButton"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"
        app:srcCompat="@drawable/achivmentsicon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>