<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/error_loginframegray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginframegray"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/error_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/error_strokepanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/strokepanel" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/error_strokepanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/strokepanel" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="311sp"
        android:layout_height="40sp"
        android:layout_marginTop="239dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/enter_loginpassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/login_et"
        android:layout_width="281sp"
        android:layout_height="48dp"
        android:layout_marginTop="343dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_login"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Username" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="281sp"
        android:layout_height="48sp"
        android:layout_marginTop="443dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="609dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/i_dont_have"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:onClick="onTextViewClick"
            android:id="@+id/go_to_register_activity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/akka"
            android:textColor="#DD2C00"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>